css/style.css
article
{
    width: 100%;
    margin-bottom: 10px;
}

section
{
    border: 3px solid black;
    width: 100%;
    margin-bottom: 5px;
    box-sizing: border-box;
}

h3
{
    width: 100%;
    box-sizing: border-box;
    background-color: #FFFF00;
}

div.rules-container
{
    display: flex;
    flex-direction: column;
    width: 100%;
    box-sizing: border-box;
}

div.rule-container
{
    display: flex;
    width: 100%;
    box-sizing: border-box;
}

div.rule-container div
{
    min-height: 30px;
    box-sizing: border-box;
}

div.rule-text
{
    width: 30%;
    background-color: #FF0000;
}

div.rule-show
{
    flex-grow: 1;
    display: flex;
    background-color: #0000FF;
}

div.rule-show div
{
    box-sizing: border-box;
    margin: 5px;
    width: 50%;
    background-color: cyan;
}

